--- a/css/base.css
+++ b/css/base.css
@@ -24,6 +24,9 @@ h1,h2,h3,h4,h5,h6,.nav-cate,.navigation{font-family: '微软雅黑'}
 .mb10{margin-bottom:10px;}
 .mb15{margin-bottom:15px;}
 .mb20{margin-bottom:20px;}
+.p20{
+	padding:20px;
+}
 .plr10{
 	padding: 0 10px;
 }
@@ -44,6 +47,9 @@ h1,h2,h3,h4,h5,h6,.nav-cate,.navigation{font-family: '微软雅黑'}
 	height:3px;
 	overflow:hidden;
 	background:#b20000;
+}
+.grey-border{
+	border:1px solid #e8e8e8
 }
 /*layout*/
 .topbar, .header, .main, .nav-box{
@@ -112,6 +118,25 @@ h1,h2,h3,h4,h5,h6,.nav-cate,.navigation{font-family: '微软雅黑'}
 	position: relative;
 	height: 229px;
 	overflow: hidden;
+}
+/*input ui
+-----------------*/
+.input-text{
+	border:1px solid #cecece;
+	padding:6px;
+	width: 250px;
+	height:16px;
+	line-height:16px;
+}
+.checkcode{
+	width:66px;
+	margin-right:10px;
+}
+.button {
+	padding: 3px 14px;
+	background: #9e0101;
+	font-size: 12px;
+	color: #fff;
 }
 /* header 
 --------------------------------*/
