--- a/css/base.css
+++ b/css/base.css
@@ -25,6 +25,7 @@ h1,h2,h3,h4,h5,h6,.nav-cate,.navigation{font-family: '微软雅黑'}
 .mb10{margin-bottom:10px;}
 .mb15{margin-bottom:15px;}
 .mb20{margin-bottom:20px;}
+.p10{padding: 10px;}
 .p20{
 	padding:20px;
 }
